<resources>
    <string name="app_name">Kid Zoo</string>
    <string name="titulo_listado_layout">Listado de Animales</string>
    <string name="saludo">¡Hola! Bienvenido al equipo amigo :)</string>
    <string name="tematica">
        Aqui aprenderemos contigo acerca de los animales del zoologico, conoceremos que sonido hace y sus caracateristicas.
        Y como extra; si acerca muchas veces en el juego una pequeña historia del zoologico te estara esperando. Mucha suerte amigo!
    </string>
    <string name="listado">Listado</string>
    <string name="jugar">Jugar</string>
    <string name="menu">Menu</string>
    <string name="acerca">Acerca de</string>
    <string name="salir">Salir</string>
    <string name="nombreAnimal">Nombre animal</string>
    <string name="nombreCientifico">Nombre Cientifico: </string>
    <string name="nombreCientifico_Animal">***</string>
    <string name="clase">Clase:</string>
    <string name="claseAnimal">***</string>
    <string name="orden">Orden: </string>
    <string name="ordenAnimal">***</string>
    <string name="familia">Familia: </string>
    <string name="familiaAnimal">***</string>
    <string name="alimentacion">Alimentacion:</string>
    <string name="alimentacionAnimal">***</string>
    <string name="habitat">Habitat:</string>
    <string name="habitatAnimal">***</string>
    <string name="camada">Camana/Puesta:</string>
    <string name="camadaAnimal">***</string>
    <string name="gestacion">Gestacion:</string>
    <string name="gestacionAnimal">***</string>
    <string name="nombre_mono_araña">Mono Araña</string>
    <string name="descripcion_mono_araña">
        La gente llama mono araña a todos aquellos monos del Nuevo Mundo con largas extremidades que les permiten balancearse
        y saltar de árbol en árbol mejor que cualquier trapecista. Reciben otros nombres comunes: marimonos, marimondas, atelos, koatás o coatás y maquisapas.
    </string>
    <string name="nombre_cientifico_mono">Arteles geoffroyii.</string>
    <string name="clase_mono">Mammalia.</string>
    <string name="orden_mono">Primate.</string>
    <string name="familia_mono">Cebidae.</string>
    <string name="alimento_mono">Omnívora; principalmente frutas, nueces, semillas, yemas, flores, hojas, insectos arácnidos y huevos.</string>
    <string name="habitat_mono">Bosques tropicales.</string>
    <string name="camada_mono">Una cría.</string>
    <string name="gestacion_mono">Gestación: 226 a 232 días.</string>
    <string name="nombre_koala">Koala</string>
    <string name="descripcion_koala">
        Los koalas tienen algunas características curiosas. Para empezar, a menudo se les llama oso koala pero
        no son osos en lo absoluto. El nombre koala significa color ceniza.
    </string>
    <string name="nombre_cientifico_koala">Phascolarctos cinereus.</string>
    <string name="clase_koala">Mammalia.</string>
    <string name="orden_koala">Phascolarctos cinereus.</string>
    <string name="familia_koala">Phascolarctidae (Fascolárctidos o Falangéridos).</string>
    <string name="alimento_koala">Herbívoro, carnívoro, omnívoro, etc.</string>
    <string name="habitat_koala">Vive en las zonas costeras de las regiones este y sur australianas.</string>
    <string name="camada_koala">Como generalidad los Koalas no tienen mas de una cría en cada parto.</string>
    <string name="gestacion_koala">30-36 días.</string>
    <string name="nombre_leopardo">Leopardo</string>
    <string name="descripcion_leopardo">
        A un leopardo se lo reconoce por su pelaje. Este es amarillo con motas oscuras y pequeñas.
        Su cuerpo es macizo y muestra una imagen de mucha robustez. 4 potentes patas son su principal arma de caza,
        para trepar y para perseguir a sus presas. Las dos patas traseras poseen 4 dedos, mientras que las patas delanteras
        están provistas de 5 dedos, todos ellos con garras retráctiles, característica fundamental de los felinos.
    </string>
    <string name="nombre_cientifico_leopardo">Pantera pardus.</string>
    <string name="clase_leopardo">Mammalia.</string>
    <string name="orden_leopardo">Carnívora.</string>
    <string name="familia_leopardo">Felidae.</string>
    <string name="alimento_leopardo">Carnívora; principalmente ungulados de pequeños y mediano tamaño, como gacelas, impalas y ciervos, animales domésticos, primates, roedores, aves y a veces artrópodos</string>
    <string name="habitat_leopardo">Del oeste de Turquía y península Malaya, sri Lanka , java y la mayor parte de África</string>
    <string name="camada_leopardo">1 a 6 crías</string>
    <string name="gestacion_leopardo">90 a 105 días</string>
    <string name="nombre_caballo">Caballo</string>
    <string name="descripcion_caballo">
        Los caballos son animales que físicamente poseen un gran porte. Su cuello se   caracteriza por ser largo,
        incluyendo cerdas de importante longitud y una cabeza sumamente alargada con dos orejas erguidas. La cola también destaca por su longitud.
    </string>
    <string name="nombre_cientifico_caballo">Equus caballus.</string>
    <string name="clase_caballo">Mammalia.</string>
    <string name="orden_caballo">Perissodactyla.</string>
    <string name="familia_caballo">Equidae</string>
    <string name="alimento_caballo">Herbívora; se alimenta especialmente de plantas ricas en fíbras.</string>
    <string name="habitat_caballo">zonas esteparias</string>
    <string name="camada_caballo">Una cría</string>
    <string name="gestacion_caballo">11 meses</string>
    <string name="nombre_puma">Puma</string>
    <string name="descripcion_puma">
        El puma (Felis concolor) es un animal felino nativo del continente Americano.
        Es conocido también como: león de montaña o león americano. El puma vive un promedio de 12 años,
        aunque en cautividad han llegado  a vivir hasta los 25 años. El tamaño varía según la distribución,
        tienden a ser más pequeños cuando más cercano al ecuador se encuentra y más grandes en los polos.
    </string>
    <string name="nombre_cientifico_puma">Felis concolor</string>
    <string name="clase_puma">Mammalia</string>
    <string name="orden_puma">Carnivora</string>
    <string name="familia_puma">Felidae</string>
    <string name="alimento_puma">Carnivora; ciervos principalmente, otros ungulados, puercoespines, liebres y castores</string>
    <string name="habitat_puma">Desde Canadá hasta el sur de Chile y la Patagonia</string>
    <string name="camada_puma">1 a 6, siendo mas general 2 3 cachorros</string>
    <string name="gestacion_puma">91 días</string>
    <string name="nombre_jaguar">Jaguar</string>
    <string name="descripcion_jaguar">
        El Jaguar es el Felino más grande que habita en América, posee una visión binocular nocturna muy buena
        y uñas retráctales en sus patas, los jaguares acostumbran a comer aves, peces, ciervos, primates, pecaríes
        y serpientes, su hermoso pelaje está cubierto por hermosas rosetas que le sirven como camuflaje al momento de cazar.
    </string>
    <string name="nombre_cientifico_jaguar">Panthera onca</string>
    <string name="clase_jaguar">Mammalia</string>
    <string name="orden_jaguar">Carnivora</string>
    <string name="familia_jaguar">Felidae</string>
    <string name="alimento_jaguar">Carnívora; desde peces, sapos y aves, hasta pecaríes, venados y monos</string>
    <string name="habitat_jaguar">Suroeste de Estados Unidos hasta la Patagonia</string>
    <string name="camada_jaguar">2 crías</string>
    <string name="gestacion_jaguar">93 a 105 días</string>
    <string name="nombre_elefante">Elefante</string>
    <string name="descripcion_elefante">
        El elefante africano de sabana se caracteriza por su gran cabeza, amplias orejas que cubren los hombros,
        trompa larga y musculosa, presencia de dos colmillos en la mandíbula superior, bien desarrollados en ambos sexos aunque mayores en los machos.
    </string>
    <string name="nombre_cientifico_elefante">Loxodonta africana</string>
    <string name="clase_elefante">Mammalia</string>
    <string name="orden_elefante">Proboscidea</string>
    <string name="familia_elefante">Elephantidae</string>
    <string name="alimento_elefante">Hervibora; hierva, arboles, corteza, frutas, hojas y ramas</string>
    <string name="habitat_elefante">Bosques tropicales, sabanas, estepas y matorrales semidesérticos</string>
    <string name="camada_elefante">1 cría</string>
    <string name="gestacion_elefante">22 meses</string>
    <string name="nombre_leon">León</string>
    <string name="descripcion_leon">
        Mamífero felino de 250 a 350 cm de longitud (cola incluida), pelaje pardo claro, cabeza grande,
        cola larga terminada en un mechón y uñas fuertes que usa para cazar; el macho es mayor que la hembra y
        tiene una larga melena que le cubre la nuca y el cuello; es carnívoro y habita en manada en desiertos y estepas de África y la India.
    </string>
    <string name="nombre_cientifico_leon">Panthera leo</string>
    <string name="clase_leon">Mammalia</string>
    <string name="orden_leon">Carnivora</string>
    <string name="familia_leon">Felidae</string>
    <string name="alimento_leon">Carnívora; principalmente animales de mediano y gran tamaño como ñues, impalas y otros antílopes, cebras, jirafas, búfalos y también carroña</string>
    <string name="habitat_leon">Sabana, bosques abiertos y zonas arbustivas</string>
    <string name="camada_leon">De 1 a 6 crías</string>
    <string name="gestacion_leon">109 días</string>
    <string name="nombre_tigre">Tigre</string>
    <string name="descripcion_tigre">
        La morfología del tigre de Bengala es bella e imponente. Es un cuadrúpedo de patas gruesas, mandíbulas y dientes fuertes y característico patrón de coloración.
        Al respecto, su pelaje presenta un tono amarillo a naranja claro que en el vientre y las zonas internas de las patas se torna blanco o crema.
    </string>
    <string name="nombre_cientifico_tigre">Panthera tigris tigris</string>
    <string name="clase_tigre">Mammalia</string>
    <string name="orden_tigre">carnívora</string>
    <string name="familia_tigre">Felidae</string>
    <string name="alimento_tigre">carnívora; principalmente grandes mamíferos como jabalís, ciervos, búfalos y jaguares</string>
    <string name="habitat_tigre">Bosques tropicales, bosques perennifolios, pantanos, praderas y zonas rocosas</string>
    <string name="camada_tigre">2 a 3 crías</string>
    <string name="gestacion_tigre">104 a 106</string>
    <string name="nombre_buho">Búho</string>
    <string name="descripcion_buho">
        Posee un plumaje de color gris oscuro con tonalidades marrón oscuro.
        Tiene manchas blancas esparcidas por todo el cuerpo y a todo lo largo de la parte de adelante.
    </string>
    <string name="nombre_cientifico_buho">Bubo virginianus</string>
    <string name="clase_buho">Aves</string>
    <string name="orden_buho">Strigiformes</string>
    <string name="familia_buho">Strigidae</string>
    <string name="alimento_buho">carnívora, pequeños mamíferos como: ratones, ratas y ardillas, aves, ranas, reptiles, entre otros animales</string>
    <string name="habitat_buho">Bosques, tundras, desiertos, entre otros</string>
    <string name="camada_buho">2 a 5 huevos</string>
    <string name="gestacion_buho">25 días</string>
    <string name="nombre_avestruz">Avestruz</string>
    <string name="descripcion_avestruz">
        Habitan en zonas áridas y semiáridas como desiertos y sabanas de África, principalmente en Arabia Saudita.
        Es el ave más grande y pesada del mundo con sus 1.7-2.8 metros de altura y 63-145 kilogramos de peso. La hembra llega a medir hasta 2.0 m.
    </string>
    <string name="nombre_cientifico_avestruz">Struthio camelus</string>
    <string name="clase_avestruz">Aves</string>
    <string name="orden_avestruz">Strutioniformes</string>
    <string name="familia_avestruz">Struthionidae</string>
</resources>